Versão inicial do site com Docker + NGINX V2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title>Site Linux</title></head>
-<body><h1>Rodando no Docker Linux com NGINX!</h1></body>
+<body><h1>Rodando no Docker Linux com NGINX! V2 </h1></body>
 </html>
